fixed meet the trainer names on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -512,6 +512,39 @@ section {
     top: 0px;
 }
 
+.trainer-1 {
+    background-image: url("../images/trainer-1.jpg");
+}
+
+.trainer-2 {
+    background-image: url("../images/trainer-2.jpg");
+}
+
+.trainer-3 {
+    background-image: url("../images/trainer-3.jpg");
+}
+
+.trainer-bio {
+    padding: 25px;
+}
+
+.trainer-bio h3 {
+    font-size: 28px;
+    line-height: 1.3;
+    display: none;
+}
+
+.trainer-bio h4 {
+    font-weight: lighter;
+    font-size: 22px;
+    margin-bottom: 15px;
+    display: none;
+}
+
+.trainer-bio p {
+    font-size: 17px;
+}
+
 .trainer-img {
     width: 100%;
     min-height: 300px;
@@ -554,37 +587,6 @@ section {
     font-size: 22px;
     top: 200px;
     transition: 0.6s;
-}
-
-.trainer-1 {
-    background-image: url("../images/trainer-1.jpg");
-}
-
-.trainer-2 {
-    background-image: url("../images/trainer-2.jpg");
-}
-
-.trainer-3 {
-    background-image: url("../images/trainer-3.jpg");
-}
-
-.trainer-bio {
-    padding: 25px;
-}
-
-.trainer-bio h3 {
-    font-size: 28px;
-    line-height: 1.3;
-}
-
-.trainer-bio h4 {
-    font-weight: lighter;
-    font-size: 22px;
-    margin-bottom: 15px;
-}
-
-.trainer-bio p {
-    font-size: 17px;
 }
 
 .trainers {
@@ -689,6 +691,14 @@ section {
         writing-mode: unset;
         grid-column: 1/-1;
         grid-row: -1;
+    }
+
+    .trainer-img h3, .trainer-img h4, .trainer-img::after {
+        display: none;
+    }
+
+    .trainer-bio h3, .trainer-bio h4 {
+        display: block;
     }
 
   }
